feat: update editable fields
