# src/main/kotlin/no/digdir/catalog_admin_service/controller/FieldsController.kt
@@ -1,5 +1,6 @@
 package no.digdir.catalog_admin_service.controller
 
+import no.digdir.catalog_admin_service.model.EditableFields
 import no.digdir.catalog_admin_service.model.Fields
 import no.digdir.catalog_admin_service.security.EndpointPermissions
 import no.digdir.catalog_admin_service.service.FieldsService
@@ -12,6 +13,8 @@ import org.springframework.stereotype.Controller
 import org.springframework.web.bind.annotation.CrossOrigin
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.PostMapping
+import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
 
 @Controller
@@ -31,6 +34,18 @@ class FieldsController(
             ResponseEntity(fieldsService.getCatalogFields(catalogId), HttpStatus.OK)
         } else {
             ResponseEntity(HttpStatus.FORBIDDEN)
+        }
+
+    @PostMapping(value = ["/editable"], consumes = [MediaType.APPLICATION_JSON_VALUE])
+    fun updateEditableFields(
+        @AuthenticationPrincipal jwt: Jwt,
+        @PathVariable catalogId: String,
+        @RequestBody editableFields: EditableFields
+    ): ResponseEntity<EditableFields> =
+        when {
+            !endpointPermissions.hasOrgAdminPermission(jwt, catalogId) -> ResponseEntity(HttpStatus.FORBIDDEN)
+            editableFields.catalogId != catalogId -> ResponseEntity(HttpStatus.BAD_REQUEST)
+            else -> ResponseEntity(fieldsService.updateEditableFields(editableFields), HttpStatus.OK)
         }
 
 }
